# random-quote-generator

./: LICENSE  pyproject.toml
.github/workflows/: branch.yaml
docs/: conf.py  index.rst
random_quote_generator/: __init__.py
random_quote_generator_vis/: get_quote.py
tests/: test_get_quote.py
